--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next-sanity": "^0.5.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "super-react-gist": "^1.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.5",
