--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.3.1",
+    "sharp": "^0.30.5",
     "super-react-gist": "^1.1.0"
   },
   "devDependencies": {
