--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next-sanity": "^0.5.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-hook-form": "^7.31.2",
     "react-icons": "^4.3.1",
     "sharp": "^0.30.5",
     "super-react-gist": "^1.1.0"
