--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "@portabletext/react": "^1.0.6",
     "@sanity/client": "^3.3.0",
     "@sanity/image-url": "^1.0.1",
+    "axios": "^0.27.2",
     "groq": "^2.29.3",
     "mapbox-gl": "^2.8.2",
     "next": "12.1.5",
     "next-sanity": "^0.5.2",
+    "nodemailer": "^6.7.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-hook-form": "^7.31.2",
     "react-icons": "^4.3.1",
+    "react-toastify": "^9.0.1",
     "sharp": "^0.30.5",
     "super-react-gist": "^1.1.0"
   },
