--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,7 @@
     "es6": true,
     "node": true
   },
-  "parser": "babel-eslint",
+  "parser": "@babel/eslint-parser",
   "extends": [
     "next/core-web-vitals",
     "eslint:recommended",
@@ -14,8 +14,8 @@
     "plugin:react/recommended",
     "plugin:import/errors",
     "plugin:import/warnings",
-    "plugin:jsx-a11y/recommended"
-    // "plugin:react-hooks/recommended",
+    "plugin:react-hooks/recommended"
+    // "plugin:jsx-a11y/recommended",
     // always put prettier at last
     // "prettier"
   ],
@@ -41,6 +41,10 @@
     "react/react-in-jsx-scope": "off",
     // NextJs specific fix: allow jsx syntax in js files
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }], //should add ".ts" if typescript project
-    "react/display-name": 1
+    "react/display-name": 1,
+    "react/prop-types": 0,
+    "react/no-unescaped-entities": 0,
+    "import/no-anonymous-default-export": "off",
+    "no-unused-vars": "warn"
   }
 }
