--- a/package.json
+++ b/package.json
@@ -1,40 +1,41 @@
 {
   "name": "portfolio",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "yarn lint",
+    "prepare": "husky install"
   },
   "dependencies": {
-    "@aws-sdk/client-ses": "^3.121.0",
     "@portabletext/react": "^1.0.6",
     "@sanity/client": "^3.3.0",
     "@sanity/image-url": "^1.0.1",
-    "aws-sdk": "^2.1167.0",
-    "axios": "^0.27.2",
+    "axios": "^1.3.3",
     "groq": "^2.29.3",
-    "mapbox-gl": "^2.8.2",
+    "mapbox-gl": "^2.12.1",
     "next": "12.1.5",
     "next-sanity": "^0.5.2",
-    "nodemailer": "^6.7.5",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-hook-form": "^7.31.2",
-    "react-icons": "^4.3.1",
-    "react-toastify": "^9.0.1",
+    "nodemailer": "^6.9.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.1",
+    "react-icons": "^4.7.1",
+    "react-toastify": "^9.1.1",
     "sharp": "^0.30.5",
     "super-react-gist": "^1.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.6",
-    "@babel/eslint-parser": "^7.18.2",
-    "autoprefixer": "^10.4.5",
-    "eslint": "8.14.0",
+    "@babel/core": "^7.20.12",
+    "@babel/eslint-parser": "^7.19.1",
+    "autoprefixer": "^10.4.13",
+    "eslint": "^8.34.0",
     "eslint-config-next": "12.1.5",
-    "postcss": "^8.4.12",
-    "tailwindcss": "^3.0.24"
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.6",
+    "husky": "^8.0.0"
   }
 }
